[package]
name = "init"
version = "0.1.0"
edition = "2021"
default-run = "fibonacci"

[[bin]]
name = "controlflow"
path = "src/controlflow.rs"

[[bin]]
name = "loop"
path = "src/loop.rs"

[[bin]]
name = "fibonacci"
path = "src/fibonacci.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
