[package]
name = "init"
version = "0.1.0"
edition = "2021"
default-run = "controlflow"

[[bin]]
name = "controlflow"
path = "src/controlflow.rs"

[[bin]]
name = "loop"
path = "src/loop.rs"

[[bin]]
name = "fibonacci"
path = "src/fibonacci.rs"

[[bin]]
name = "functions"
path = "src/functions.rs"

[[bin]]
name = "struct"
path = "src/struct.rs"

[[bin]]
name = "enum"
path = "src/enum.rs"

[[bin]]
name = "ownership"
path = "src/ownership.rs"

[[bin]]
name = "traits"
path = "src/traits.rs"

[[bin]]
name = "threads"
path = "src/threads.rs"

[[bin]]
name = "concurrency"
path = "src/concurrency.rs"

[[bin]]
name = "slices"
path = "src/slices.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
